1998-09-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_Canvas): Use addWidget:X:Y:centerFlag: and removeWidget:.

1998-09-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_ScheduleItem): Add trigger:X:Y:.
	(_CompleteProbeDisplayLabel): Remove setProbeDisplayManager: and
	rename setProbeDisplay: to setTargetWidget:.

1998-09-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_ScheduleItem): Add at:owner:widget:x:y:.

1998-09-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Circle): Make argument to setRadius: unsigned.
	Provide Circle, Line, ScheduleItem, and TextItem class objects.
	(_ScheduleItem, ScheduleItem): New protocols.
	(_TextItem): Add +createBegin: and setCenterFlag:.

1998-09-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Pixmap): New method setDecorationsFlag:.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Widget): Declare -getParent and -getTopLevel.
	Revert removal of -getWindowGeometry and -setWindowGeometry:, but don't
	document them.
	(Histogram): Declare setXaxisMin:max:step:precision:.

1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Pixmap): Add setDirectory:.

1998-08-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Pixmap): Revert create:widget: and create:file: addition
	and use setFile: and setWidget: instead.

1998-08-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_Pixmap): Add create:widget: and create:file:.
	Move setRaster: to using phase (still need to make implementation
	synchronize).  Add save:.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Graph): Add setRangesXMin:Max:.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Graph): Arguments to setScaleModeX:Y: are now boolean, not
	integers. 

1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_VarProbeEntry): Replace setProbeType: with setVarProbe:.
	Add getVarProbe.
